Revision history for DBIx::Class

0.08099_04 2008-07-24 01:00:00
        - Fixed $schema->clone bug which caused clone and source to share 
          internal hash refs
        - Added register_extra_source methods for additional sources
        - Added datetime_undef_if_invalid for InflateColumn::DateTime to
          return undef on invalid date/time values
        - Added search_related_rs method to ResultSet
        - add a make_column_dirty method to Row to force updates
        - throw a clear exception when user tries multi-has_many prefetch
        - SQLT parser prefixes index names with ${table}_idx_ to avoid clashes
        - mark ResultSetManager as deprecated and undocument it
        - pod fix (RT #32988)
        - add Test::Exception to test requirements (RT #34256)
        - make ash's build_requires/META.yml fixes work better
        - is_deferable support on relations used by the SQL::Translator
          parser
        - Refactored DBIx::Class::Schema::Versioned
        - Syntax errors from resultset components are now reported correctly
        - sqltargs respected correctly in deploy et al.
        - Added support for savepoints, and using them automatically in
          nested transactions if auto_savepoint is set in connect_info.
        - Changed naming scheme for constraints and keys in the sqlt parser;
          names should now be consistent and collision-free.
        - Improve handling of explicit key attr in ResultSet::find
        - Add warnings for non-unique ResultSet::find queries
        - Changed Storage::DBI::Replication to Storage::DBI::Replicated and
          refactored support.
        - By default now deploy/diff et al. will ignore constraint and index 
          names
        - Add ResultSet::_is_deterministic_value, make new_result filter the
          values passed to new to drop values that would generate invalid SQL.
        - Use Sub::Name to name closures before installing them. Fixes 